<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_friend_to_group">Add Friend to Group</string>
    <string name="are_you_sure_to_clear_chat">Are you sure want to clear %1$s?</string>
    <string name="new_group_with">New Group with %1$s</string>
    <string name="are_you_sure_to_leave_chat">Are you sure want to leave %1$s?</string>
    <string name="unique_admin_warnings">You are the unique admin of this group.\nWe recommend choosing an admin before you leave.</string>
    <string name="name">Name</string>
    <string name="chatq_bot">ChatQ Bot</string>
    <string name="chatq_id">ChatQ ID</string>
    <string name="block_user">Block User</string>
    <string name="unblock_user">Unblock User</string>
    <string name="txt_leave_chat_failed">Leave chat failed. Please try it again later!!!</string>
    <string name="time">Time</string>
    <string name="url_domain">URL\'s domain</string>
    <string name="url_title">URL\'s title</string>
    <string name="loading">Loading...</string>
    <string name="self_chat">Self Chat</string>
    <string name="tell_us_why_report">Tell us why you are sending us this report</string>
    <string name="created_this_group">\u0020created this group</string>
    <string name="invite">Invite</string>
    <string name="search_tab_all">All</string>
    <string name="search_tab_symbols">Symbols</string>
    <string name="search_tab_people">People</string>
    <string name="search_tab_groups">Groups</string>
    <string name="search_tab_messages">Messages</string>
    <string name="search_tab_contacts">Contacts</string>
    <string name="search_see_more">See More</string>
    <string name="search_matched_messages">%1$s matched messages</string>
    <string name="search_no_results">No results found for</string>
    <string name="search_new_search">New Search</string>
    <string name="chatq_room">ChatQ Room</string>
    <string name="users_is_typing">... is typing</string>
    <string name="report_message">Report Message</string>
</resources>