<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="horizontal">

    <include
        android:id="@+id/includedSearchToolbar"
        layout="@layout/search_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/screen_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/screen_padding" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchTab"
        android:layout_width="0dp"
        android:layout_height="@dimen/_33sdp"
        android:layout_marginTop="8dp"
        android:overScrollMode="never"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/includedSearchToolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/searchAllScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/rvSearchTab">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchAllSymbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24sdp">

                <TextView
                    android:id="@+id/tvAllSymbol"
                    style="@style/TextViewChatTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_tab_symbols"
                    android:textColor="@color/gray_heading"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAllSymbol"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAllSymbol" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchAllContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24sdp">

                <TextView
                    android:id="@+id/tvAllContacts"
                    style="@style/TextViewChatTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_tab_contacts"
                    android:textColor="@color/gray_heading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAllContacts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAllContacts" />

                <TextView
                    android:id="@+id/tvAllContactsMore"
                    style="@style/TextViewChatSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_see_more"
                    android:textColor="@color/blue_link"
                    app:layout_constraintBottom_toBottomOf="@+id/tvAllContacts"
                    app:layout_constraintEnd_toEndOf="@+id/tvAllContacts"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchAllGroups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24sdp">

                <TextView
                    android:id="@+id/tvAllGroups"
                    style="@style/TextViewChatTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_tab_groups"
                    android:textColor="@color/gray_heading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAllGroups"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAllGroups" />

                <TextView
                    android:id="@+id/tvAllGroupsMore"
                    style="@style/TextViewChatSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_see_more"
                    android:textColor="@color/blue_link"
                    app:layout_constraintBottom_toBottomOf="@+id/tvAllGroups"
                    app:layout_constraintEnd_toEndOf="@+id/tvAllGroups"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchAllMessages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24sdp">

                <TextView
                    android:id="@+id/tvAllMessages"
                    style="@style/TextViewChatTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_tab_messages"
                    android:textColor="@color/gray_heading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAllMessages"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAllMessages" />

                <TextView
                    android:id="@+id/tvAllMessagesMore"
                    style="@style/TextViewChatSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_see_more"
                    android:textColor="@color/blue_link"
                    app:layout_constraintBottom_toBottomOf="@+id/tvAllMessages"
                    app:layout_constraintEnd_toEndOf="@+id/tvAllMessages"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchEmpty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/includedSearchToolbar">

        <ImageView
            android:id="@+id/ivSearchEmpty"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/img_empty_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvNoResultsHeader"
            style="@style/TextViewDialogMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_no_results"
            android:textColor="@color/black_title"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintBottom_toTopOf="@+id/ivSearchEmpty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNoResults"
            style="@style/TextViewDialogMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/black_title"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNoResultsHeader"
            tools:text='"bitcoin"' />

        <TextView
            android:id="@+id/tvNewSearch"
            style="@style/TextViewDialogMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_new_search"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintBottom_toTopOf="@+id/ivSearchEmpty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNoResults" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:id="@+id/searchEmpty"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:visibility="invisible"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--        <ImageView-->
    <!--            android:id="@+id/ivSearchEmpty"-->
    <!--            android:layout_width="@dimen/_200sdp"-->
    <!--            android:layout_height="@dimen/_200sdp"-->
    <!--            android:src="@drawable/img_empty_search"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            tools:ignore="ContentDescription" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/tvNoResultsHeader"-->
    <!--            style="@style/TextViewDialogMenu"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/search_no_results"-->
    <!--            android:textColor="@color/black_title"-->
    <!--            android:textSize="@dimen/_17sdp"-->
    <!--            app:layout_constraintBottom_toTopOf="@+id/ivSearchEmpty"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/tvNoResults"-->
    <!--            style="@style/TextViewDialogMenu"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="@dimen/_24sdp"-->
    <!--            android:layout_marginEnd="@dimen/_24sdp"-->
    <!--            android:gravity="center"-->
    <!--            android:singleLine="true"-->
    <!--            android:textColor="@color/black_title"-->
    <!--            android:textSize="@dimen/_22sdp"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/tvNoResultsHeader"-->
    <!--            tools:text='"bitcoin"' />-->

    <!--        <TextView-->
    <!--            android:id="@+id/tvNewSearch"-->
    <!--            style="@style/TextViewDialogMenu"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/search_new_search"-->
    <!--            android:textSize="@dimen/_17sdp"-->
    <!--            app:layout_constraintBottom_toTopOf="@+id/ivSearchEmpty"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/tvNoResults" />-->

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>